<!--
MIT License

Copyright © 2024 HARDCODED JOY S.R.L. (https://hardcodedjoy.com)

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appbase_ll_outside_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="?attr/appBaseColorPopupUnder"
    android:orientation="horizontal"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <include layout="@layout/appbase_popup_tm"/>

        <ScrollView
            android:id="@+id/appbase_sv_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingLeft="2.5dp"
                android:paddingRight="2.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/appbase_iv_saturation_lightness"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:scaleType="fitXY"
                        android:layout_marginRight="5dp"
                        android:background="#80808080"
                        tools:ignore="ContentDescription,RtlHardcoded" />

                    <ImageView
                        android:id="@+id/appbase_iv_hue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5.0"
                        android:scaleType="fitXY"
                        android:layout_marginLeft="5dp"
                        android:background="#80808080"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        tools:ignore="ContentDescription,RtlHardcoded" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:layout_marginRight="5dp"
                            android:gravity="right"
                            android:text="@string/color_opacity"
                            tools:ignore="RtlHardcoded" />

                        <SeekBar
                            android:id="@+id/appbase_sb_current_opacity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:max="255"
                            android:progress="128"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:layout_marginRight="5dp"
                            android:gravity="right"
                            android:text="@string/color_old"
                            tools:ignore="RtlHardcoded" />
                        <ImageView
                            android:id="@+id/appbase_iv_color_old"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.0"
                            android:scaleType="fitXY"
                            android:background="#80808080"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:layout_marginRight="5dp"
                            android:gravity="right"
                            android:text="@string/color_current"
                            tools:ignore="RtlHardcoded" />
                        <ImageView
                            android:id="@+id/appbase_iv_color_current"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.0"
                            android:scaleType="fitXY"
                            android:background="#80808080"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:layout_marginRight="5dp"
                            android:gravity="right"
                            android:text="@string/color_argb_code"
                            tools:ignore="RtlHardcoded" />
                        <EditText
                            android:id="@+id/appbase_et_current_argb_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            tools:ignore="Autofill,LabelFor,TextFields" />
                    </LinearLayout>

                </LinearLayout>

                <include layout="@layout/appbase_popup_btn_cancel_ok"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>